--- a/research/ES.Test/ES.Test.csproj
+++ b/research/ES.Test/ES.Test.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NEST" Version="6.2.0" />
+  </ItemGroup>
+
 </Project>
