--- a/src/Integration/Elastic/Elastic.csproj
+++ b/src/Integration/Elastic/Elastic.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\..\Domain\Models\Models.csproj" />
+    <ProjectReference Include="..\..\Common\Wrappers\Wrappers.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NEST" Version="6.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
