--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ESSettings":{
+    "NodeUrl":"http://localhost:9200"
+  },
+  "MySQLSettings":{
+    "ConnectionString":"Server=localhost;Database=OffersDB;Uid=root;SslMode=none"
+  },
+  "MQSettings":{
+    "Host":"localhost"
+  }
 }
