--- a/src/DatabaseSynchronizer/DatabaseSynchronizer.csproj
+++ b/src/DatabaseSynchronizer/DatabaseSynchronizer.csproj
@@ -4,5 +4,23 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Integration\RabbitMQ\RabbitMQ.csproj" />
+    <ProjectReference Include="..\Integration\MySQL\MySQL.csproj" />
+    <ProjectReference Include="..\Integration\Elastic\Elastic.csproj" />
+    <ProjectReference Include="..\Domain\Services\Services.csproj" />
+    <ProjectReference Include="..\Domain\Models\Models.csproj" />
+    <ProjectReference Include="..\Domain\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\Common\Logger\Logger.csproj" />
+    <ProjectReference Include="..\Common\Results\Results.csproj" />
+    <ProjectReference Include="..\Common\Utils\Utils.csproj" />
+    <ProjectReference Include="..\Common\Wrappers\Wrappers.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
+  </ItemGroup>
 </Project>
